--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">HackOhio2016</string>
+    <string-array name="deposit_arrays">
+        <item>Get All Deposits</item>
+        <item>Get Deposit by ID</item>
+        <item>Create a Deposit</item>
+        <item>Update an Existing Deposit</item>
+        <item>Delete a Deposit</item>
+    </string-array>
 </resources>
