--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,18 @@
 <resources>
     <string name="app_name">HackOhio2016</string>
-    <string name="title">Capital One - NESSI Api</string>
+    <string name="title">Capital One - Nessi Api</string>
     <string name="description">The following app was created during The Ohio State University\'s OHI/O Hackathon (2016).
         The features are meant to demonstrate the capabilities and uses of the Nessi API provided by Capital One.
     </string>
     <string name="button_account">Account</string>
     <string name="button_desposit">Desposit</string>
+    <string-array name="deposit_arrays">
+        <item>Get All Deposits</item>
+        <item>Get Deposit by ID</item>
+        <item>Create a Deposit</item>
+        <item>Update an Existing Deposit</item>
+        <item>Delete a Deposit</item>
+    </string-array>
+    <string name="title_activity_withdraw">Withdraw</string>
+    <string name="password_header">Please Enter Your Password To Continue</string>
 </resources>
