--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">HackOhio2016</string>
-    <string name="title">Capital One - Nessi Api</string>
+    <string name="title">Capital One - Nessie Api</string>
     <string name="description">The following app was created during The Ohio State University\'s OHI/O Hackathon (2016).
         The features are meant to demonstrate the capabilities and uses of the Nessi API provided by Capital One.
     </string>
@@ -14,5 +14,8 @@
         <item>Delete a Deposit</item>
     </string-array>
     <string name="title_activity_withdraw">Withdraw</string>
-    <string name="password_header">Please Enter Your Password To Continue</string>
+    <string name="api_header">Please choose your API key or enter a new one below and tap add.</string>
+    <string name="select">Select</string>
+    <string name="add">Add</string>
+    <string name="remove">Remove</string>
 </resources>
