--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="add">Add</string>
     <string name="remove">Remove</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_account_details_acvtivity">Account Details</string>
 </resources>
